# Allegro_Taskspace

./: README.md
allegro-InvDyn/: CMakeLists.txt  example.cpp
allegro-InvDyn/include/: Model.h
allegro-InvDyn/sdfast/: allegro_air.sd  allegro_air_d.c  allegro_air_i  allegro_air_lib.c  allegro_air_s.c
allegro-InvDyn/src/: Model.cpp
allegro-manip/: CMakeLists.txt  package.xml
allegro-manip/allegro_moveit_config/config/: allegro_hand_left.srdf
allegro-manip/config/: optitrack_object_grasping.yaml
allegro-manip/include/: Fingers.h  HandManip.h  HandManip2.h  Kinematic.h
allegro-manip/launch/: hand_manip.launch  hand_manip2.launch  test_transform.launch
allegro-manip/src/: Fingers.cpp  GraspMatrix.cpp  GraspMatrix.h  HandManip.cpp  HandManip.h  HandManip2.cpp  Kinematic.cpp  handManip_node.cpp  handManip_node2.cpp
allegro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
allegro_moveit_config/config/: allegro_hand_left.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
allegro_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
